# telegram-bot-template

./: .coverage  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
bot/: Dockerfile  main.py
bot/core/: __init__.py  config.py  loader.py  logging.py
bot/filters/: __init__.py  admin.py  chat_type.py  content.py
bot/handlers/: __init__.py  errors_router.py
bot/handlers/groups/: __init__.py  chat_member.py  commands.py
bot/handlers/private/: __init__.py  blocking.py  commands.py  menu.py  settings.py  start.py
bot/keyboards/: __init__.py  inline.py
bot/locales/en/: buttons.ftl  default.ftl
bot/locales/ru/: buttons.ftl  default.ftl
bot/managers/: __init__.py  database_manager.py  i18n_manager.py  redis_manager.py
bot/middlewares/: __init__.py  antiflood_middleware.py  i18n_middleware.py  user_middleware.py
bot/models/: __init__.py  user.py
bot/routes/: webhook.py
bot/services/: __init__.py  broadcast_service.py  user_service.py
bot/utils/: __init__.py  template.py  text.py
tests/: __init__.py  conftest.py  test_broadcast_service.py
