[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Production-ready Telegram bot template with aiogram 3.x, PostgreSQL, Redis, and i18n support."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "er1one", email = "er1one@vk.com" }
]

dependencies = [
    "aerich>=0.9.2",
    "aiogram>=3.22.0",
    "aiogram-i18n>=1.4",
    "fastapi>=0.121.2",
    "fluent-runtime>=0.4.0",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/Er1one/telegram-bot-template"
Repository = "https://github.com/Er1one/telegram-bot-template.git"
Issues = "https://github.com/Er1one/telegram-bot-template/issues"